--- a/ImageVaultGUI/ImageVaultGUI.vcxproj.filters
+++ b/ImageVaultGUI/ImageVaultGUI.vcxproj.filters
@@ -47,4 +47,9 @@
       <Filter>Resource Files</Filter>
     </QtRcc>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ui_ImageVaultGUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
