Operational GUI. No back-end code in place. Basic visual setup and signaling setup complete.

--- a/ImageVaultGUI/ImageVaultGUI.vcxproj.filters
+++ b/ImageVaultGUI/ImageVaultGUI.vcxproj.filters
@@ -52,4 +52,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="VersionInfo.txt">
+      <Filter>Form Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
