--- a/ImageVaultGUI/ImageVaultGUI.vcxproj
+++ b/ImageVaultGUI/ImageVaultGUI.vcxproj
@@ -95,6 +95,9 @@
   <ItemGroup>
     <ClInclude Include="ui_ImageVaultGUI.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="VersionInfo.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
